--- a/index.html
+++ b/index.html
@@ -4,46 +4,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dewi Astuti Muchtar</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #f5f5f5;
-      color: #333;
       margin: 0;
       padding: 0;
+      font-family: 'Roboto', sans-serif;
+      background: linear-gradient(to right, #ffe6f0, #f9f3ff);
+      color: #333;
+      height: 100vh;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      flex-direction: column;
       text-align: center;
     }
     h1 {
-      font-size: 2.5em;
+      font-family: 'Pacifico', cursive;
+      font-size: 3em;
       margin-bottom: 0.2em;
+      color: #b43b78;
     }
     p {
       font-size: 1.2em;
-      margin-bottom: 1em;
+      margin-bottom: 1.5em;
     }
-    .sosial a {
-      margin: 0 10px;
+    .sosmed a {
       text-decoration: none;
-      color: #555;
-      font-weight: 600;
+      margin: 0 15px;
+      font-weight: bold;
+      color: #b43b78;
+      transition: 0.3s;
     }
-    .sosial a:hover {
-      color: #000;
+    .sosmed a:hover {
+      color: #5e2350;
     }
   </style>
 </head>
 <body>
   <h1>Dewi Astuti Muchtar</h1>
-  <p>Mahasiswa Sistem Informasi | Calon Youthpreneur</p>
-  <div class="sosial">
-    <a href="https://instagram.com/">Instagram</a>
-    <a href="https://linkedin.com/">LinkedIn</a>
+  <p>Mahasiswa Sistem Informasi | Videographer | Future Youthpreneur</p>
+  <div class="sosmed">
+    <a href="https://instagram.com/dewymuchtaars" target="_blank">Instagram</a>
+    <a href="https://linkedin.com/in/" target="_blank">LinkedIn</a>
     <a href="mailto:dewiastutimuchtar9@gmail.com">Email</a>
   </div>
 </body>
